--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-langchain
-langchain-community
-openai
-chromadb
-tiktoken
+streamlit==1.32.0
+langchain==0.1.14
+langchain-community==0.0.28
+openai==1.22.0
+chromadb==0.4.24
+tiktoken==0.6.0
+protobuf==4.25.3
+opentelemetry-api==1.22.0
+opentelemetry-sdk==1.22.0
